<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#24b9bf "
    android:padding="10dp"
    tools:context=".AgregarPublicacion">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/icono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/libros"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewNuevaPublicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/baloo_paaji_2_medium"
        android:text="@string/nombre"
        android:textColor="#FAFAFA"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="#3fbcc4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/baloo_paaji_2_medium"
        android:text="@string/nueva"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/tituloPublicacion"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/fondo_redondeado"
        android:ems="10"
        android:fontFamily="@font/baloo_paaji_2_medium"
        android:hint="@string/titulo"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:padding="10dp"
        android:textColor="#BABABA"
        android:textColorHint="#EAECED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/textoPublicacion"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@drawable/fondo_redondeado"
        android:ems="10"
        android:fontFamily="@font/baloo_paaji_2_medium"
        android:gravity="start|top"
        android:hint="@string/publicacion"
        android:inputType="textMultiLine"
        android:maxLength="300"
        android:padding="10dp"
        android:textColor="#BABABA"
        android:textColorHint="#EAECED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloPublicacion"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/buttonPublicar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/fondo_redondeado_alreves"
        android:fontFamily="@font/baloo_paaji_2_medium"
        android:text="@string/publicar"
        android:textColor="#EAECED"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceCategoria"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Spinner
        android:id="@+id/choiceCategoria"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/fondo_redondeado_sin_fondo"
        android:padding="10dp"
        android:spinnerMode="dialog"
        android:theme="@style/SpinnerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoPublicacion"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>